--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="hotcss" content="initial-dpr=1" />
+    <link rel="icon" href="./favicon.ico">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1267567_e0q84axj516.css">
     <title>maizuo</title>
+    <script src="./lib/hotcss.js"></script>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but maizuo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
